kubernetes/base/apps/self-hosted/matrix/element-web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-web
  namespace: self-hosted
  labels:
    app.kubernetes.io/name: element-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: element-web
    spec:
      enableServiceLinks: false
      containers:
        - name: element-web
          image: vectorim/element-web:v1.12.15
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: element-config
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: element-config
          configMap:
            name: element-web-config
