kubernetes/base/apps/self-hosted/matrix/element-web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: self-hosted
spec:
  selector:
    app.kubernetes.io/name: element-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
