kubernetes/base/apps/self-hosted/matrix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: self-hosted
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: matrix.internal
    gethomepage.dev/description: Matrix Homeserver
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Self-Hosted
    gethomepage.dev/icon: sh-matrix
    gethomepage.dev/name: Matrix
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - matrix.internal
      secretName: synapse-ing-cert
  rules:
    - host: matrix.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  name: http
